--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
