--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "chart.js": "^4.1.2",
+    "faker": "^6.6.6",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
