--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 004020590571.dkr.ecr.us-east-1.amazonaws.com
       - REPOSITORY_URI=004020590571.dkr.ecr.us-east-1.amazonaws.com/ruralsenserepo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
